# kelicad-agent

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
scripts/: build-macos.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: LTC3.lib
src-tauri/src/: main.rs  protocol.rs  simulator.rs  websocket.rs
